fix docker, tests and kafka integration when assembly is finished..