@@ -1,4 +1,9 @@
-FROM openjdk:8u181-jre-alpine
+FROM adoptopenjdk/openjdk11
+LABEL maintainer="Rafael <rafael.whatsthestory@gmail.com>"
+
 WORKDIR /app
-COPY build/libs/vote-management .
-CMD ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom", "-jar", "vote-management.jar" ]
+EXPOSE 8090
+
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -XX:+UnlockExperimentalVMOptions -Djava.security.egd=file:/dev/./urandom -jar vote-management.jar" ]
+
+ADD build/libs/vote-management.jar .
